--- a/demo/provisioning/ansible/roles/ngrok/tasks/main.yml
+++ b/demo/provisioning/ansible/roles/ngrok/tasks/main.yml
@@ -1,31 +1,22 @@
 ---
-- name: Check whether ngrok zip file exists or not
+- name: Check that the ngrok zip file exists
   stat: 
-    path: /etc/ngrok.zip
+    path: /usr/local/etc/ngrok.zip
   register: ngrok_file
 
 - name: Download ngrok 
   get_url:
     url: https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip
-    dest: /etc/ngrok.zip
+    dest: /usr/local/etc/ngrok.zip
     mode: 0644
-    state: present
   when: not ngrok_file.stat.exists
 
 - name: unzip ngrok ZIP file
   unarchive:
-    src: /etc/ngrok.zip
+    src: /usr/local/etc/ngrok.zip
     dest: /usr/local/bin
     remote_src: yes
-
-- name: Fetch current user information
-  shell: whoami
-  changed_when: false
-  register: whoami
-
-- name: Print current user information
-  debug:
-    var: whoami.stdout
+  when: ngrok_file.stat.exists
 
 - name: Assign ngrok account auth token
   command: "ngrok authtoken 1qsCUjLBDm8Sy5s6xpy8p4gKpa6_4a4GM638mPiVNaCe2hqms"
@@ -48,3 +39,13 @@
 - name: Print ngrok Jenkins URL
   debug:
     var: ngrok_url
+
+# - name: Fetch current user information
+#   shell: whoami
+#   changed_when: false
+#   register: whoami
+
+# - name: Print current user information
+#   debug:
+#     var: whoami.stdout
+
