--- a/demo/provisioning/ansible/roles/openJDK/tasks/jfrog-openjdk8.yml
+++ b/demo/provisioning/ansible/roles/openJDK/tasks/jfrog-openjdk8.yml
@@ -26,10 +26,10 @@
   - 'JAVA_HOME=/usr/lib/jvm/adoptopenjdk-8-hotspot-amd64'
   - 'PATH=$PATH:$JAVA_HOME/bin'
 
-- name: Check JAVA_HOME
-  command: "echo $JAVA_HOME"
-  register: java_home
+# - name: Check JAVA_HOME
+#   command: "echo $JAVA_HOME"
+#   register: java_home
 
-- name: Print JAVA_HOME
-  debug: 
-    var: java_home.stdout
+# - name: Print JAVA_HOME
+#   debug: 
+#     var: java_home.stdout
