--- a/demo/provisioning/ansible/roles/openJDK/vars/main.yml
+++ b/demo/provisioning/ansible/roles/openJDK/vars/main.yml
@@ -2,7 +2,7 @@
 JDK_VERSION: 11
 JDK_URL: https://download.java.net/java/ga/jdk11/openjdk-11_linux-x64_bin.tar.gz
 JDK_SHA256_CHECKSUM: 3784cfc4670f0d4c5482604c7c513beb1a92b005f569df9bf100e8bef6610f2e
-JDK_URL_DEST_FILE: /etc/open-jdk11.tar.gz
+JDK_URL_DEST_FILE: /usr/local/etc/open-jdk11.tar.gz
 JDK_EXTRACT_DIR: /usr/lib/java11
 JDK_HOME_DIR: /usr/lib/java11/jdk-11
 JDK_ALTERNATIVES_FULL_PATH: /usr/lib/java11/jdk-11/bin/java
@@ -10,7 +10,7 @@ JDK_ALTERNATIVES_FULL_PATH: /usr/lib/java11/jdk-11/bin/java
 # JDK_VERSION: 9
 # JDK_URL: https://download.java.net/java/GA/jdk9/9/binaries/openjdk-9_linux-x64_bin.tar.gz
 # JDK_SHA256_CHECKSUM: f908e31b6185e11b322825809172dcbb7ac0dce64061c9cf154cb1b0df884480
-# JDK_URL_DEST_FILE: /etc/open-jdk9.tar.gz
+# JDK_URL_DEST_FILE: /usr/local/etc/open-jdk9.tar.gz
 # JDK_EXTRACT_DIR: /usr/lib/java9
 # JDK_HOME_DIR: /usr/lib/java9/jdk-9
 # JDK_ALTERNATIVES_FULL_PATH: /usr/lib/java9/jdk-9/bin/java
@@ -18,7 +18,7 @@ JDK_ALTERNATIVES_FULL_PATH: /usr/lib/java11/jdk-11/bin/java
 # JDK_VERSION: 15.0.2
 # JDK_URL: https://download.java.net/java/GA/jdk15.0.2/0d1cfde4252546c6931946de8db48ee2/7/GPL/openjdk-15.0.2_linux-x64_bin.tar.gz
 # JDK_SHA256_CHECKSUM: 91ac6fc353b6bf39d995572b700e37a20e119a87034eeb939a6f24356fbcd207
-# JDK_URL_DEST_FILE: /etc/open-jdk15.tar.gz
+# JDK_URL_DEST_FILE: /usr/local/etc/open-jdk15.tar.gz
 # JDK_EXTRACT_DIR: /usr/lib/java15
 # JDK_HOME_DIR: /usr/lib/java15/jdk-15.0.2
 # JDK_ALTERNATIVES_FULL_PATH: /usr/lib/java15/jdk-15.0.2/bin/java
