--- a/demo/provisioning/ansible/roles/jenkins/tasks/main.yml
+++ b/demo/provisioning/ansible/roles/jenkins/tasks/main.yml
@@ -23,22 +23,29 @@
     update_cache: true
     state: present
 
-- name: Set custom HTTP port to jenkins
-  lineinfile:
-    path: /etc/default/jenkins
-    regexp: '--httpPort='
-    line: 'JENKINS_ARGS="--webroot=/var/cache/$NAME/war --httpPort=8081"'
-    state: present
-    backrefs: yes
+# - name: Set custom HTTP port to jenkins
+#   lineinfile:
+#     path: /etc/default/jenkins
+#     regexp: '--httpPort='
+#     line: 'JENKINS_ARGS="--webroot=/var/cache/$NAME/war --httpPort=8081"'
+#     state: present
+#     backrefs: yes
 
-- name: Pass JAVA_ARGS values to ensure groovy csrf error is bypassed & skip initial admin setup (if enabled)
-  lineinfile:
-    path: /etc/default/jenkins
-    regexp: 'JAVA_ARGS="-Djava.awt.headless=true"'
-    # line: 'JAVA_ARGS="-Djava.awt.headless=true -Dhudson.security.csrf.DefaultCrumbIssuer.EXCLUDE_SESSION_ID=true -Djenkins.install.runSetupWizard=false"'
-    line: 'JAVA_ARGS="-Djava.awt.headless=true -Dhudson.security.csrf.DefaultCrumbIssuer.EXCLUDE_SESSION_ID=true"'
-    state: present
-    backrefs: yes
+# - name: Pass JAVA_ARGS values to ensure groovy csrf error is bypassed & skip initial admin setup (if enabled)
+#   lineinfile:
+#     path: /etc/default/jenkins
+#     regexp: 'JAVA_ARGS="-Djava.awt.headless=true"'
+#     # line: 'JAVA_ARGS="-Djava.awt.headless=true -Dhudson.security.csrf.DefaultCrumbIssuer.EXCLUDE_SESSION_ID=true -Djenkins.install.runSetupWizard=false"'
+#     line: 'JAVA_ARGS="-Djava.awt.headless=true -Dhudson.security.csrf.DefaultCrumbIssuer.EXCLUDE_SESSION_ID=true"'
+#     state: present
+#     backrefs: yes
+
+- name: Customize Jenkins config
+  template: 
+    src: templates/jenkins.j2
+    dest: /etc/default/jenkins
+    owner: root
+    mode: 0644
 
 - name: Ensure Jenkins is running
   become: yes
