--- a/demo/provisioning/ansible/roles/gradle/vars/main.yml
+++ b/demo/provisioning/ansible/roles/gradle/vars/main.yml
@@ -2,12 +2,12 @@
 GRADLE_VERSION: 6.8.3
 GRADLE_URL: https://services.gradle.org/distributions/gradle-6.8.3-bin.zip
 GRADLE_URL_DEST_FILE: /usr/local/etc/gradle-6.8.3-bin.zip
-GRADLE_EXTRACT_DIR: /usr/lib/gradle
-GRADLE_HOME_DIR: /usr/lib/gradle/gradle-6.8.3
+GRADLE_EXTRACT_DIR: /usr/local
+GRADLE_HOME_DIR: /usr/local/gradle-6.8.3
 
 # GRADLE_VERSION: 4.6
 # GRADLE_URL: https://services.gradle.org/distributions/gradle-4.6-bin.zip
 # GRADLE_URL_DEST_FILE: /usr/local/etc/gradle-4.6-bin.zip
-# GRADLE_EXTRACT_DIR: /usr/lib/gradle
-# GRADLE_HOME_DIR: /usr/lib/gradle/gradle-4.6
+# GRADLE_EXTRACT_DIR: /usr/local
+# GRADLE_HOME_DIR: /usr/local/gradle-4.6
 # JDK_ALTERNATIVES_FULL_PATH: /usr/lib/java9/jdk-9/bin/java
