--- a/demo/provisioning/ansible/tools.yml
+++ b/demo/provisioning/ansible/tools.yml
@@ -12,5 +12,7 @@
    - jenkins
   # - docker-jenkins
   # - docker-nginx
-   - ngrok
+  # - ngrok
   # - vortex
+  #  - postgresql
+  #  - sonarqube
