--- a/demo/provisioning/vagrant/Vagrantfile
+++ b/demo/provisioning/vagrant/Vagrantfile
@@ -50,6 +50,20 @@ Vagrant.configure("2") do |config|
         Configurator.provision(sandbox.vm, true)
     end    
 
+    config.vm.define "testbox" do |testbox|
+        # Configuring own SSH Key
+        config.vm.provision "file", source: "~/.ssh/id_rsa.pub", destination: "~/.ssh/authorized_keys"
+        config.ssh.private_key_path = ["~/.ssh/id_rsa", "~/.vagrant.d/insecure_private_key"]
+        config.ssh.insert_key = false
+
+        Configurator.box(testbox.vm, "debian/buster64", "testbox", "192.168.1.12")
+
+        config.vm.provider "virtualbox" do |vb|
+            Configurator.settings(vb, true, 6144, 2, "testBOX")
+        end
+        Configurator.provision(testbox.vm, true)
+    end    
+
 end
 
   
